--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    >
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
+      <div class="container header-container" >
       <nav class="header-navigation">
-        <a class="header-logo" href="./index.html">
-          Web<span class="header-logo-color">Studio</span></a
+        <a class="header-logo" href="./index.html"
+          >Web<span class="header-logo-color">Studio</span></a
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
@@ -43,14 +52,18 @@
             >
           </li>
         </ul>
+        </div>
       </address>
     </header>
     <main>
       <section class="hero">
+        <div class=" container hero-container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-btn">Order Service</button>
+        </div>
       </section>
       <section class="features">
+        <div class="container">
         <h2 class="visually-hidden">Features</h2>
         <ul class="features-list">
           <li class="features-item">
@@ -82,8 +95,10 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <section class="team">
+        <div class="container">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
@@ -94,8 +109,10 @@
               height="260"
               class="team-img"
             />
+            <div class="team-container-item">
             <h3 class="team-subtitle">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
+            </div>
           </li>
           <li class="team-item">
             <img
@@ -105,8 +122,10 @@
               height="260"
               class="team-img"
             />
+            <div class="team-container-item">
             <h3 class="team-subtitle">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
+            </div>
           </li>
           <li class="team-item">
             <img
@@ -127,12 +146,16 @@
               height="260"
               class="team-img"
             />
+            <div class="team-container-item">
             <h3 class="team-subtitle">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
+            </div>
           </li>
         </ul>
+        </div>
       </section>
       <section class="portfolio">
+        <div class="container">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
@@ -143,8 +166,10 @@
               height="300"
               class="portfolio-img"
             />
+            <div class="portfolio-container">
             <h3 class="portfolio-subtitle">Banking App</h3>
             <p class="portfolio-text">App</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -154,8 +179,10 @@
               height="300"
               class="portfolio-img"
             />
+            <div class="portfolio-container">
             <h3 class="portfolio-subtitle">Cashless Payment</h3>
             <p class="portfolio-text">Marketing</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -165,8 +192,10 @@
               height="300"
               class="portfolio-img"
             />
+             <div class="portfolio-container">
             <h3 class="portfolio-subtitle">Meditation App</h3>
             <p class="portfolio-text">App</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -176,8 +205,10 @@
               height="300"
               class="portfolio-img"
             />
+            <div class="portfolio-container">
             <h3 class="portfolio-subtitle">Taxi Service</h3>
             <p class="portfolio-text">Marketing</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -187,8 +218,10 @@
               height="300"
               class="portfolio-img"
             />
+            <div class="portfolio-container">
             <h3 class="portfolio-subtitle">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -198,13 +231,17 @@
               height="300"
               class="portfolio-img"
             />
+            <div class="portfolio-container">
             <h3 class="portfolio-subtitle">Online Courses</h3>
             <p class="portfolio-text">Marketing</p>
+            </div>
           </li>
         </ul>
+       </div> 
       </section>
     </main>
     <footer class="footer">
+      <div class="container">
       <a class="footer-logo" href="./index.html"
         >Web<span class="footer-logo-color">Studio</span></a
       >
@@ -212,6 +249,10 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
+
+
+
